Update history settings

--- a/.zsh/history
+++ b/.zsh/history
@@ -1,7 +1,10 @@
 HISTFILE=$HOME/.zsh_history
 SAVEHIST=1000
 HISTSIZE=999
+HISTDUP=erase
+setopt appendhistory
 setopt sharehistory
-setopt hist_expire_dups_first
-setopt hist_ignore_dups
-setopt hist_verify
+setopt hist_ignore_space
+setopt hist_ignore_all_dups
+setopt hist_save_no_dups
+setopt hist_find_no_dups
